# code-review-env-meta

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_all_cases.py  test_out.txt  validate_output.txt  validation_source.txt
data/: easy_prs.json  hard_prs.json  medium_prs.json
graders/: grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_env.py
