[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codereviewenv"
version = "1.0.0"
description = "CodeReviewEnv for Meta OpenEnv Hackathon"
authors = [
    { name = "hackathon-submission" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "openai>=1.14.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
